Implemented servicoId route
